--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                         <div class="card-content">
                             <div class="card-info-avatar is-center">
                                 <img class="avatar-img"
-                                    src="https://cdn.jsdelivr.net/gh/laoxuai/assert/images/20200125221102.png"
+                                    src="https://avatars.githubusercontent.com/u/151696483?…00&u=a4c518f9df3c11ff4d00131c8a8759511eb7a9eb&v=4"
                                     alt="avatar">
                                 <div class="author-info__name">青青很OK</div>
                                 <div class="author-info__description">00后，正在努力中</div>
                             </div>
                             <div class="card-info-social-icons is-center">
-                                <a class="social-icon" href="https://github.com/laoxuai" target="_blank">
+                                <a class="social-icon" href="https://github.com/QingqingOK/" target="_blank">
                                     <i class="fa fa-github"></i>
                                 </a>
                             </div>
