--- a/index.html
+++ b/index.html
@@ -158,6 +158,12 @@
                         </div>
 
                         <hr>
+                        <h2>CSDN博客</h2>
+                        <div class="tool">
+			    <a href="https://blog.csdn.net/weixin_67997381" target="_blank">青青很OK</a>
+                        </div>
+			    
+                        <hr>
                         <h2>刷题</h2>
                         <div class="tool">
 			    <a href="https://www.polarctf.com/#/" target="_blank">PolarD&N CTF</a><br>
